--- a/normal.html
+++ b/normal.html
@@ -44,22 +44,24 @@
 	}
 
 	.sidebar {
-    width: 50%;
+		width: 50%;
     height: 88%;
     position: sticky;
     border: 5px solid #00ffd500;
-    background-color: #00ffd530;		
+    border-bottom-left-radius: 3px;
+    background-color: #00ffd530;
 	}
 	.sidebar:hover {
 		
 		
 	}
 	.sidebar2 {
-    filter: brightness(75%);
+filter: brightness(75%);
     width: 44%;
     height: 88%;
     position: absolute;
     border: 5px solid #00ffd500;
+    border-bottom-right-radius: 3px;
     background-color: #00ffd530;
     right: 0px;
     transition: 200ms;
@@ -325,13 +327,13 @@
 
 <body>
 	<div class=sidearea id=sidearea>
-		<div style="width: 50%; background-color: #282929; border-radius: 3px; height: 10%;">
+		<div style="width: 50%; background-color: #00ffd530; border-top-left-radius: 3px; height: 10%;">
 			<center><a href="/"><img src="/images/bark-it-fluent.png" style=" object-fit: cover; width: 100%;"></a></center>
 			
 		</div>
-		<div onclick="onsidebarclick()" style="width: 50%; background-color: #282929; border-radius: 3px; right: 0%; color: white; height: 10%; top: 0%; position: absolute;">
+		<div onclick="onsidebarclick()" style="width: 50%; background-color: #00ffd530; border-top-right-radius: 3px; right: 0%; color: white; height: 10%; top: 0%; position: absolute;">
 			<center>
-				<button style="height: 57px; background: #282929;">
+				<button style="height: 57px; background: transparent;">
 					<img id=toggle_button style="width: 12.5%;" src="/images/arrow-back.png">
 				</button>
 			</center>
